[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "hello_world"
dynamic = ["version"]
description = "A simple hello world Flask app"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13.13,<3.14.0"
dependencies = [
    "Click==8.4.1",
    "Flask==3.1.3",
    "Jinja2==3.1.6",
    "MarkupSafe==2.1.5",
    "Werkzeug==3.1.8",
    "markdown==3.10.2",
    "blinker==1.9.0",
    "pluggy==1.6.0",
]

[project.optional-dependencies]
test = [
    "pytest<=9.0.3",
    "requests",
    "urllib3==2.7.0",
    "exceptiongroup<=1.1.3",
    "typing-extensions<=4.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
addopts = "-rsxX -l --tb=short --junitxml test-report.xml"
